fix sidebar nav z-index issue

--- a/scss/partials/_logo.scss
+++ b/scss/partials/_logo.scss
@@ -1,18 +1,6 @@
 .name-logo {
 	text-align: center;
 	font-family: "script", sans-serif;
-	font-size: 20vw;
-	line-height: 20vw;
-
-	@media #{$medium-up} {
-		font-size: 15vw;
-		line-height: 15vw;
-	}
-
-	@media #{$large-up} {
-		font-size: 12vw;
-		line-height: 8vw;	
-	}
 
 	.title {
 		font-size: 30vw;
@@ -31,7 +19,27 @@
 		.capital {
 			font-family: "olympic", sans-serif;
 		}
+
+		// smaller logo used as home page link
+		&.clickable {
+			font-size: 18px;
+		}
 	} // title
+
+	.description {
+		font-size: 20vw;
+		line-height: 20vw;
+
+		@media #{$medium-up} {
+			font-size: 15vw;
+			line-height: 15vw;
+		}
+
+		@media #{$large-up} {
+			font-size: 12vw;
+			line-height: 8vw;
+		}
+	} // description
 
 	.attributes {
 		color: $primary-light;
