--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -9,9 +9,11 @@ nav {
 	position: absolute;
 	top: 0;
 	width: 100%;
+	z-index: 100;
 
 	&.is-shown {
 		opacity: 1;
+		z-index: 300;
 	}
 
 	ul {
@@ -67,10 +69,10 @@ a.button-toggle-nav {
 	color: $primary-light;
 	cursor: pointer;
 	height: 30px;
-	right: 80px;
+	right: 53px;
 	position: absolute;
 	text-decoration: none;
-	top: 30px;
+	top: 0;
 	transition: left 0.2s;
 	width: 30px;
 	z-index: 10;
